--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "motion": "^12.4.10",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-draggable": "^4.4.6",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.15.1",
     "react-router-dom": "^7.2.0",
