--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
     "match-sorter": "^8.0.0",
     "motion": "^12.4.10",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-draggable": "^4.4.6",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.5.0",
-    "react-intersection-observer": "^9.15.1",
+    "react-intersection-observer": "^9.16.0",
     "react-router-dom": "^7.2.0",
     "sort-by": "^1.2.0",
     "swiper": "^11.2.5"
